--- a/index.html
+++ b/index.html
@@ -5,8 +5,125 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
+<header>
+<a>
+  <img src="img/nerds-logo.svg" alt="Интернет магазин «Нёрдс»">
+</a>
+  <nav>
+    <ul>
+      <li><a href="">Студия</a></li>
+      <li><a href="">Клиенты</a></li>
+      <li><a href="catalog.html">Магазин</a></li>
+      <li><a href="">Контакты</a></li>
+    </ul>
+  </nav>
+  <a href="blank.html">Корзина</a>
+<section>
+  <h1>Долго, дорого,<br>скрупулезно.</h1>
+  <p>Математически выверенный дизайн<br>для вашего сайта или мобильног</p>
+  <figure>
+    <img src="img\nerds-index-slide1 1.png" alt="Телефоны">
+  </figure>
+  <button type="button">Узнать больше</button>
+</section>
+ </header>
+  <main>
+    <section>
+ <img src="img\illustration-1 1.jpg" alt="Веб-сайты">
+ <ul>
+   <li>
+     <h2>Веб-сайты</h2>
+     <p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
+   </li>
+   <button type="button">Заказать</button>
+</ul>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<img src="img/illustration-2 1.png" alt="Приложения">
+<ul>
+  <li>
+    <h2>Приложения</h2>
+    <p>Покорите топ-10 приложений в<br>AppStore и Google Play</p>
+  </li>
+  <button type="button">Заказать</button>
+</ul>
 
+<img src="img/illustration-3 1.png" alt="Презентация">
+<ul>
+  <li>
+    <h2>Презентация</h2>
+    <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
+  </li>
+  <button type="button">Заказать</button>
+</ul>
+    </section>
+<section>
+  <h1>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h1>
+  <p>Исповедуем принципы минимализма и чистоты. Ставим математически</p>
+</section>
+
+<section>
+  <h2>Выполняем заказы на разработку</h2>
+  <ul>
+    <li>Веб-сайтов любой сложности</li>
+    <li>Мобильных приложений для iOS и Android</li>
+    <li>Слайдшоу и видео для корпоративных презентаций</li>
+  </ul>
+<figure>
+  <img src="img\nerds-illustration 1.png" alt="Картинка">
+  <figcaption>с 2004 года Любим точность во всем: </figcaption>
+</figure>
+</section>
+
+<section>
+  <ul>
+    <li>
+  <h2>146%</h2>
+  <p>Уровень самоотдачи</p>
+    </li>
+  </ul>
+
+  <ul>
+    <li>
+      <h2>100%</h2>
+      <p>Соблюдение сроков</p>
+    </li>
+  </ul>
+
+  <ul>
+    <li>
+      <h2>50%</h2>
+      <p>Минимальная предоплата</p>
+    </li>
+  </ul>
+</section>
+</main>
+
+<footer>
+<section>
+  <h2>NЁRDS DESIGN STUDIO</h2>
+  <p>
+    191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8
+    тел. <a href="tel:+78122757575">+7 (812) 275 75-75</a>
+  </p>
+  <button type="button">Напишите нам</button>
+</section>
+<section>
+  <h2>Давайте дружить, это выгодно!</h2>
+  <p>Скидка 10% для друзей из социальных сетей.</p>
+  <ul>
+    <li>
+      <a href="#">Вконтакте</a> 
+    </li>
+    <li>
+      <a href="#">Фейсбук</a>
+    </li>
+    <li>
+      <a href="#">Инстаграм</a>
+    </li>
+  </ul>
+</section>
+
+</footer>
+    
   </body>
 </html>
