--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
      <h2>Веб-сайты</h2>
      <p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
    </li>
-   <button type="button">Заказать</button>
 </ul>
+ <button type="button">Заказать</button>
 
 <img src="img/illustration-2 1.png" alt="Приложения">
 <ul>
@@ -44,8 +44,8 @@
     <h2>Приложения</h2>
     <p>Покорите топ-10 приложений в<br>AppStore и Google Play</p>
   </li>
-  <button type="button">Заказать</button>
 </ul>
+<button type="button">Заказать</button>
 
 <img src="img/illustration-3 1.png" alt="Презентация">
 <ul>
@@ -53,8 +53,9 @@
     <h2>Презентация</h2>
     <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
   </li>
-  <button type="button">Заказать</button>
 </ul>
+<button type="button">Заказать</button>
+
     </section>
 <section>
   <h1>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h1>
@@ -102,7 +103,7 @@
 <section>
   <h2>NЁRDS DESIGN STUDIO</h2>
   <p>
-    191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8
+    191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>
     тел. <a href="tel:+78122757575">+7 (812) 275 75-75</a>
   </p>
   <button type="button">Напишите нам</button>
