Добавляем разметку текста

--- a/index.html
+++ b/index.html
@@ -17,19 +17,17 @@
       <li><a href="">Контакты</a></li>
     </ul>
   </nav>
-  <a href="blank.html">Корзина</a>
+  <a href="">Корзина</a>
 <section>
   <h1>Долго, дорого,<br>скрупулезно.</h1>
-  <p>Математически выверенный дизайн<br>для вашего сайта или мобильног</p>
-  <figure>
-    <img src="img\nerds-index-slide1 1.png" alt="Телефоны">
-  </figure>
-  <button type="button">Узнать больше</button>
+  <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
+    <img src="img/nerds-index-slide1 1.png" alt="Телефоны">
+  <a href="">Узнать больше</a>
 </section>
  </header>
   <main>
     <section>
- <img src="img\illustration-1 1.jpg" alt="Веб-сайты">
+ <img src="img/illustration-1 1.jpg" alt="Веб-сайты">
  <ul>
    <li>
      <h2>Веб-сайты</h2>
@@ -58,8 +56,8 @@
 
     </section>
 <section>
-  <h1>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h1>
-  <p>Исповедуем принципы минимализма и чистоты. Ставим математически</p>
+  <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
+  <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
 </section>
 
 <section>
@@ -70,7 +68,7 @@
     <li>Слайдшоу и видео для корпоративных презентаций</li>
   </ul>
 <figure>
-  <img src="img\nerds-illustration 1.png" alt="Картинка">
+  <img src="img/nerds-illustration 1.png" alt="Картинка">
   <figcaption>с 2004 года Любим точность во всем: </figcaption>
 </figure>
 </section>
@@ -81,16 +79,10 @@
   <h2>146%</h2>
   <p>Уровень самоотдачи</p>
     </li>
-  </ul>
-
-  <ul>
     <li>
       <h2>100%</h2>
       <p>Соблюдение сроков</p>
     </li>
-  </ul>
-
-  <ul>
     <li>
       <h2>50%</h2>
       <p>Минимальная предоплата</p>
@@ -101,17 +93,19 @@
 
 <footer>
 <section>
-  <h2>NЁRDS DESIGN STUDIO</h2>
+  <h2>Nеrds design studio</h2>
   <p>
     191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>
     тел. <a href="tel:+78122757575">+7 (812) 275 75-75</a>
   </p>
   <button type="button">Напишите нам</button>
+  <img src="img/map 1.png" alt="Карта">
+  <img src="img/map-marker 1.png" alt="Логотип">
 </section>
 <section>
-  <h2>Давайте дружить, это выгодно!</h2>
-  <p>Скидка 10% для друзей из социальных сетей.</p>
   <ul>
+    <h2>Давайте дружить, это выгодно!</h2>
+  <p>Скидка 10% для друзей из социальных сетей.</p>
     <li>
       <a href="#">Вконтакте</a> 
     </li>
@@ -123,8 +117,6 @@
     </li>
   </ul>
 </section>
-
 </footer>
-    
   </body>
 </html>
