--- a/catalog.html
+++ b/catalog.html
@@ -6,18 +6,88 @@
   </head>
   <body>
 <header>
-<a>
+ <a>
   <img src="img/nerds-logo.svg" alt="Интернет магазин «Нёрдс»">
-</a>
+ </a>
   <nav>
+    <h1>Магазин готовых шаблонов</h1>
     <ul>
       <li><a href="">Студия</a></li>
       <li><a href="">Клиенты</a></li>
       <li><a href="catalog.html">Магазин</a></li>
       <li><a href="">Контакты</a></li>
     </ul>
-  </nav>
-  <a href="">Корзина</a>
-  </header>
-  </body>
-  </html>
+   <a href="">Корзина</a>
+ </nav>
+</header>
+
+<main>
+
+ <section>
+   <h2>Стоимость</h2>
+ </section>
+ 
+ <section>
+   <h2>Сортировать</h2>
+ </section>
+ 
+ <ul>
+   <li><a href="">По цене</a></li>
+   <li>По типу</li>
+   <li>По названию</li>
+ </ul>
+ 
+ <section>
+   <img src="img/img-sedona 1.png" alt="Город Седона">
+   <img src="img/img-pink 1.png" alt="Приложение">
+   <img src="img/img-barbershop 1.png" alt="Барбершоп">
+   <img src="img/img-mishka 1.png" alt="Вязание">
+   <img src="img/img-aplus 1.png" alt="Учёба">
+   <img src="img/img-kvast 1.png" alt="Квас">
+   <ul>
+     <li>
+       <a href="#">1</a>
+     </li>
+     <li>
+       <a>2</a>
+     </li>
+     <li>
+       <a>3</a>
+     </li>
+   </ul>
+   <button type="button">Следующая</button>
+ </section>
+
+</main>
+
+<footer>
+  <section>
+   <h2>Nеrds design studio</h2>
+   <p>
+   191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>
+   тел. <a href="tel:+78122757575">+7 (812) 275 75-75</a>
+   </p>
+   <button type="button">Напишите нам</button>
+   <img src="img/map 1.png" alt="Карта">
+   <img src="img/map-marker 1.png" alt="Логотип">
+  </section>
+    
+  <section>
+     <h2>Давайте дружить, это выгодно!</h2>
+     <p>Скидка 10% для друзей из социальных сетей.</p>
+   <ul>
+     <li>
+       <a href="#">Вконтакте</a> 
+     </li>
+     <li>
+       <a href="#">Фейсбук</a>
+     </li>
+     <li>
+       <a href="#">Инстаграм</a>
+     </li>
+    </ul>
+  </section>
+</footer>
+
+</body>
+</html>
