--- a/index.html
+++ b/index.html
@@ -23,49 +23,52 @@
 <main>
 
  <section>
-   <h1>Долго, дорого,<br>скрупулезно.</h1>
+  <div>
+   <h2>Долго, дорого,<br>скрупулезно.</h2>
    <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
-   <img src="img/nerds-index-slide1 1.png" alt="Телефоны">
+   <img src="img/nerds-index-slide1 1.png">
    <a href="">Узнать больше</a>
- </section>
- 
- <section> 
-   <button type="button">Заказать</button>
-   <img src="img/illustration-1 1.jpg" alt="Веб-сайты">
-   <ul>
+  </div>
+  <div>
+   <h2>Любим математику<br>как никто другой</h2>
+   <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций</p>
+   <img src="img/nerds-index-slide2 1.png">
+   <a href="">Узнать больше</a>
+  </div>
+  <div>
+   <h2>Только ночь,<br>только хардкор</h2>
+   <p>Работать днём, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
+   <img src="img/nerds-index-slide3 1.png">
+   <a href="">Узанть больше</a>
+  </div>
+  <ul>
      <li>
+       <img src="img/illustration-1 1.jpg" alt="Веб-сайты">
        <h2>Веб-сайты</h2>
        <p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
+       <button type="button">Заказать</button>
      </li>
-   </ul>
- 
-   <button type="button">Заказать</button>
-   <img src="img/illustration-2 1.png" alt="Приложения">
-   <ul>
      <li>
+       <img src="img/illustration-2 1.png" alt="Приложения">
        <h2>Приложения</h2>
        <p>Покорите топ-10 приложений в<br>AppStore и Google Play</p>
+       <button type="button">Заказать</button>
      </li>
-   </ul>
-
-   <button type="button">Заказать</button>
-   <img src="img/illustration-3 1.png" alt="Презентация">
-   <ul>
      <li>
+       <img src="img/illustration-3 1.png" alt="Презентация">
        <h2>Презентация</h2>
        <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
+       <button type="button">Заказать</button>
      </li>
    </ul>
  </section>
 
- <section>
+ <section> 
+  <div>
    <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
    <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
- </section>
-
- <section>
-   <h2>Выполняем заказы на разработку</h2>
    <ul>
+     <h2>Выполняем заказы на разработку</h2>
      <li>Веб-сайтов любой сложности</li>
      <li>Мобильных приложений для iOS и Android</li>
      <li>Слайдшоу и видео для корпоративных презентаций</li>
@@ -74,24 +77,30 @@
    <img src="img/nerds-illustration 1.png" alt="Картинка">
    <figcaption>с 2004 года Любим точность во всем: </figcaption>
    </figure>
- </section>
-
- <section>
+  </div>
+  <div>
    <ul>
      <li>
-       <h2>146%</h2>
+       <h3>146%</h3>
        <p>Уровень самоотдачи</p>
      </li>
      <li>
-       <h2>100%</h2>
+       <h3>100%</h3>
        <p>Соблюдение сроков</p>
      </li>
      <li>
-       <h2>50%</h2>
+       <h3>50%</h3>
        <p>Минимальная предоплата</p>
      </li>
-  </ul>
+   </ul>
+  </div>
  </section>
+ <div>
+  <img src="img/Group 5.png" alt="Логотип академии">
+  <img src="img/logo-2 1.svg" alt="Барбершоп">
+  <img src="img/logo-3 1.png" alt="Очки">
+  <img src="img/logo-4 1.png" alt="Вязание">
+ </div>
 
 </main>
 
@@ -102,14 +111,16 @@
     191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>
     тел. <a href="tel:+78122757575">+7 (812) 275 75-75</a>
    </p>
-   <button type="button">Напишите нам</button>
    <img src="img/map 1.png" alt="Карта">
-  <img src="img/map-marker 1.png" alt="Логотип">
+   <img src="img/map-marker 1.png" alt="Логотип">
+   <button type="button">Напишите нам</button>
  </section>
 
  <section>
+  <div>
    <h2>Давайте дружить, это выгодно!</h2>
    <p>Скидка 10% для друзей из социальных сетей.</p>
+  </div>
    <ul>
      <li>
        <a href="#">Вконтакте</a> 
