--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    <h2>Только ночь,<br>только хардкор</h2>
    <p>Работать днём, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
    <img src="img/nerds-index-slide3 1.png">
-   <a href="">Узанть больше</a>
+   <a href="">Узнать больше</a>
   </div>
   <ul>
      <li>
