--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
-<header>
- <a>
-  <img src="img/nerds-logo.svg" alt="Интернет магазин «Нёрдс»">
- </a>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Нёрдс</title>
+</head>
+<body>
+ <header>
+  <a>
+   <img src="img/nerds-logo.svg" alt="Интернет магазин «Нёрдс»">
+  </a>
   <nav>
     <ul>
       <li><a href="">Студия</a></li>
@@ -16,32 +16,32 @@
       <li><a href="catalog.html">Магазин</a></li>
       <li><a href="">Контакты</a></li>
     </ul>
-    <a href="">Корзина</a>
+     <a href="">Корзина</a>
   </nav>
-</header>
+ </header>
 
-<main>
+  <main>
 
- <section>
-  <div>
-   <h2>Долго, дорого,<br>скрупулезно.</h2>
-   <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
-   <img src="img/nerds-index-slide1 1.png">
-   <a href="">Узнать больше</a>
-  </div>
-  <div>
-   <h2>Любим математику<br>как никто другой</h2>
-   <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций</p>
-   <img src="img/nerds-index-slide2 1.png">
-   <a href="">Узнать больше</a>
-  </div>
-  <div>
-   <h2>Только ночь,<br>только хардкор</h2>
-   <p>Работать днём, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
-   <img src="img/nerds-index-slide3 1.png">
-   <a href="">Узнать больше</a>
-  </div>
-  <ul>
+   <section>
+   <div>
+     <h2>Долго, дорого,<br>скрупулезно.</h2>
+     <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
+     <img src="img/nerds-index-slide1 1.png">
+     <a href="">Узнать больше</a>
+   </div>
+   <div>
+     <h2>Любим математику<br>как никто другой</h2>
+     <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций</p>
+     <img src="img/nerds-index-slide2 1.png">
+     <a href="">Узнать больше</a>
+   </div>
+   <div>
+     <h2>Только ночь,<br>только хардкор</h2>
+     <p>Работать днём, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
+     <img src="img/nerds-index-slide3 1.png">
+     <a href="">Узнать больше</a>
+   </div>
+   <ul>
      <li>
        <img src="img/illustration-1 1.jpg" alt="Веб-сайты">
        <h2>Веб-сайты</h2>
@@ -61,79 +61,87 @@
        <button type="button">Заказать</button>
      </li>
    </ul>
- </section>
+  </section>
 
  <section> 
-  <div>
-   <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
-   <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
-   <ul>
-     <h2>Выполняем заказы на разработку</h2>
-     <li>Веб-сайтов любой сложности</li>
-     <li>Мобильных приложений для iOS и Android</li>
-     <li>Слайдшоу и видео для корпоративных презентаций</li>
-   </ul>
-   <figure>
-   <img src="img/nerds-illustration 1.png" alt="Картинка">
-   <figcaption>с 2004 года Любим точность во всем: </figcaption>
-   </figure>
-  </div>
-  <div>
-   <ul>
+   <div>
+       <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
+       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
+     <ul>
+       <h2>Выполняем заказы на разработку</h2>
+       <li>Веб-сайтов любой сложности</li>
+       <li>Мобильных приложений для iOS и Android</li>
+       <li>Слайдшоу и видео для корпоративных презентаций</li>
+     </ul>
+   </div>
+   <div>
+     <figure>
+       <img src="img/nerds-illustration 1.png" alt="Картинка">
+       <figcaption>с 2004 года Любим точность во всем: </figcaption>
+     </figure>
+     <ul>
+       <li>
+         <h3>146%</h3>
+         <p>Уровень самоотдачи</p>
+       </li>
+       <li>
+         <h3>100%</h3>
+         <p>Соблюдение сроков</p>
+       </li>
+       <li>
+         <h3>50%</h3>
+        <p>Минимальная предоплата</p>
+       </li>
+     </ul>
+    </div>
+   </section>
+   <div>
+    <ul>
      <li>
-       <h3>146%</h3>
-       <p>Уровень самоотдачи</p>
+       <img src="img/Group 5.png" alt="Логотип академии">
+       <img src="img/logo-2 1.svg" alt="Барбершоп">
+       <img src="img/logo-3 1.png" alt="Очки">
+       <img src="img/logo-4 1.png" alt="Вязание">
      </li>
-     <li>
-       <h3>100%</h3>
-       <p>Соблюдение сроков</p>
-     </li>
-     <li>
-       <h3>50%</h3>
-       <p>Минимальная предоплата</p>
-     </li>
-   </ul>
+    </ul>
   </div>
- </section>
- <div>
-  <img src="img/Group 5.png" alt="Логотип академии">
-  <img src="img/logo-2 1.svg" alt="Барбершоп">
-  <img src="img/logo-3 1.png" alt="Очки">
-  <img src="img/logo-4 1.png" alt="Вязание">
- </div>
 
-</main>
+ </main>
 
-<footer>
- <section>
-   <h2>Nеrds design studio</h2>
-   <p>
-    191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>
-    тел. <a href="tel:+78122757575">+7 (812) 275 75-75</a>
-   </p>
-   <img src="img/map 1.png" alt="Карта">
-   <img src="img/map-marker 1.png" alt="Логотип">
-   <button type="button">Напишите нам</button>
- </section>
+ <footer>
+   <section>
+     <h2>Nеrds design studio</h2>
+     <p>
+     191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>
+     тел. <a href="tel:+78122757575">+7 (812) 275 75-75</a>
+     </p>
+     <img src="img/map 1.png" alt="Карта">
+     <img src="img/map-marker 1.png" alt="Логотип">
+     <button type="button">Напишите нам</button>
+   </section>
+   <div>
+   <h2>Напишите нам</h2>
+   <button type="button">Отпавить</button>
+   </div>
 
- <section>
-  <div>
-   <h2>Давайте дружить, это выгодно!</h2>
-   <p>Скидка 10% для друзей из социальных сетей.</p>
-  </div>
-   <ul>
-     <li>
+   <section>
+    <div>
+     <h2>Давайте дружить, это выгодно!</h2>
+     <p>Скидка 10% для друзей из социальных сетей.</p>
+    </div>
+    <ul>
+      <li>
        <a href="#">Вконтакте</a> 
-     </li>
-     <li>
+      </li>
+      <li>
        <a href="#">Фейсбук</a>
-     </li>
-     <li>
+      </li>
+      <li>
        <a href="#">Инстаграм</a>
-     </li>
-   </ul>
- </section>
-</footer>
+      </li>
+    </ul>
+   </section>
+ </footer>
 
 </body>
 </html>
