--- a/catalog.html
+++ b/catalog.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
-<header>
- <a>
-  <img src="img/nerds-logo.svg" alt="Интернет магазин «Нёрдс»">
- </a>
-  <nav>
-    <h1>Магазин готовых шаблонов</h1>
-    <ul>
+<html class="page" lang="ru">
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Нёрдс</title>
+  <link href="normalize.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+</head>
+
+<body class="page-body">
+
+<header class="page-header">
+  <nav class="header-navigation">
+    <a class="header-logo">
+     <img src="img/nerds-logo.svg" alt="Интернет магазин «Нёрдс»">
+    </a>
+    <h1 class="caption">Магазин готовых шаблонов</h1>
+    <ul class="header-feuture">
       <li><a href="">Студия</a></li>
       <li><a href="">Клиенты</a></li>
       <li><a href="catalog.html">Магазин</a></li>
       <li><a href="">Контакты</a></li>
     </ul>
-   <a href="">Корзина</a>
+   <a class="header-link" href="">Корзина</a>
  </nav>
 </header>
 
-<main>
+<main class="page-main">
 
  <section>
    <h2>Стоимость</h2>
@@ -31,22 +35,22 @@
    <h2>Сортировать</h2>
  </section>
  
- <ul>
+ <ul class="main-feuture">
    <li><a href="">По цене</a></li>
    <li>По типу</li>
    <li>По названию</li>
  </ul>
  
- <section>
+ <section class="main-image">
    <img src="img/img-sedona 1.png" alt="Город Седона">
    <img src="img/img-pink 1.png" alt="Приложение">
    <img src="img/img-barbershop 1.png" alt="Барбершоп">
    <img src="img/img-mishka 1.png" alt="Вязание">
    <img src="img/img-aplus 1.png" alt="Учёба">
    <img src="img/img-kvast 1.png" alt="Квас">
-   <ul>
+   <ul class="main-benefit">
      <li>
-       <a href="#">1</a>
+       <a class="main-link" href="#">1</a>
      </li>
      <li>
        <a>2</a>
@@ -55,7 +59,7 @@
        <a>3</a>
      </li>
    </ul>
-   <button type="button">Следующая</button>
+   <button class="button" type="button">Следующая</button>
  </section>
 
 </main>
@@ -71,20 +75,26 @@
    <img src="img/map-marker 1.png" alt="Логотип">
    <button type="button">Напишите нам</button>
   </section>
-    
-  <section>
+  <div class="modal-popup">
+   <h2>Напишите нам</h2>
+   <button class="button" type="button">Отпавить</button>
+  </div>
+  
+  <section class="footer-social">
+   <div class="footer-text">
      <h2>Давайте дружить, это выгодно!</h2>
      <p>Скидка 10% для друзей из социальных сетей.</p>
-   <ul>
-     <li>
-       <a href="#">Вконтакте</a> 
-     </li>
-     <li>
-       <a href="#">Фейсбук</a>
-     </li>
-     <li>
-       <a href="#">Инстаграм</a>
-     </li>
+   </div>
+    <ul>
+      <li>
+       <a class="button-social" href="#">Вконтакте</a> 
+      </li>
+      <li>
+       <a class="button-social" href="#">Фейсбук</a>
+      </li>
+      <li>
+       <a class="button-social" href="#">Инстаграм</a>
+      </li>
     </ul>
   </section>
 </footer>
