--- a/index.html
+++ b/index.html
@@ -1,101 +1,105 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
+  <link href="normalize.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
-<body>
- <header>
-  <a>
-   <img src="img/nerds-logo.svg" alt="Интернет магазин «Нёрдс»">
-  </a>
-  <nav>
-    <ul>
+
+<body class="page-body">
+
+<header class="page-header">
+  <nav class="header-navigation">
+   <a class="header-logo">
+     <img src="img/nerds-logo.svg" alt="Интернет магазин «Нёрдс»">
+   </a>
+   <ul class="header-feature">
       <li><a href="">Студия</a></li>
       <li><a href="">Клиенты</a></li>
       <li><a href="catalog.html">Магазин</a></li>
       <li><a href="">Контакты</a></li>
     </ul>
-     <a href="">Корзина</a>
+    <a class="header-link" href="">Корзина</a>
   </nav>
- </header>
+</header>
 
-  <main>
+<main class="container">
 
-   <section>
-   <div>
-     <h2>Долго, дорого,<br>скрупулезно.</h2>
+  <section class="features">
+   <div class="feature-menu">
+     <h1 class="caption">Долго, дорого,<br>скрупулезно.</h1>
      <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
      <img src="img/nerds-index-slide1 1.png">
-     <a href="">Узнать больше</a>
+     <a class="feature-link" href="">Узнать больше</a>
    </div>
    <div>
-     <h2>Любим математику<br>как никто другой</h2>
+     <h1>Любим математику<br>как никто другой</h1>
      <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций</p>
      <img src="img/nerds-index-slide2 1.png">
-     <a href="">Узнать больше</a>
+     <a class="feature-link" href="">Узнать больше</a>
    </div>
    <div>
-     <h2>Только ночь,<br>только хардкор</h2>
+     <h1>Только ночь,<br>только хардкор</h1>
      <p>Работать днём, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
      <img src="img/nerds-index-slide3 1.png">
-     <a href="">Узнать больше</a>
+     <a class="feature-link" href="">Узнать больше</a>
    </div>
-   <ul>
-     <li>
+   <ul class="feature-list">
+     <li class="feature-red">
        <img src="img/illustration-1 1.jpg" alt="Веб-сайты">
        <h2>Веб-сайты</h2>
        <p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
-       <button type="button">Заказать</button>
+       <button class="button" type="button">Заказать</button>
      </li>
-     <li>
+     <li class="feature-green">
        <img src="img/illustration-2 1.png" alt="Приложения">
        <h2>Приложения</h2>
        <p>Покорите топ-10 приложений в<br>AppStore и Google Play</p>
-       <button type="button">Заказать</button>
+       <button class="button" type="button">Заказать</button>
      </li>
-     <li>
+     <li class="feature-yellow">
        <img src="img/illustration-3 1.png" alt="Презентация">
        <h2>Презентация</h2>
        <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
-       <button type="button">Заказать</button>
+       <button class="button" type="button">Заказать</button>
      </li>
    </ul>
-  </section>
+ </section>
 
- <section> 
-   <div>
-       <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
-       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
-     <ul>
+ <section class="benefits"> 
+   <div class="benefit-menu">
+     <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
+     <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
+     <ul class="benefit-list">
        <h2>Выполняем заказы на разработку</h2>
        <li>Веб-сайтов любой сложности</li>
        <li>Мобильных приложений для iOS и Android</li>
        <li>Слайдшоу и видео для корпоративных презентаций</li>
      </ul>
    </div>
-   <div>
-     <figure>
+   <div class="benefit-menu">
+     <figure class="main-image">
        <img src="img/nerds-illustration 1.png" alt="Картинка">
        <figcaption>с 2004 года Любим точность во всем: </figcaption>
      </figure>
-     <ul>
-       <li>
+     <ul class="benefit-list">
+       <li class="benefit-item">
          <h3>146%</h3>
          <p>Уровень самоотдачи</p>
        </li>
-       <li>
+       <li class="benefit-item">
          <h3>100%</h3>
          <p>Соблюдение сроков</p>
        </li>
-       <li>
+       <li class="benefit-item">
          <h3>50%</h3>
         <p>Минимальная предоплата</p>
        </li>
      </ul>
     </div>
-   </section>
-   <div>
+  </section>
+   <div class="benefit-logo">
     <ul>
      <li>
        <img src="img/Group 5.png" alt="Логотип академии">
@@ -106,42 +110,42 @@
     </ul>
   </div>
 
- </main>
+</main>
 
- <footer>
-   <section>
-     <h2>Nеrds design studio</h2>
-     <p>
-     191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>
-     тел. <a href="tel:+78122757575">+7 (812) 275 75-75</a>
-     </p>
-     <img src="img/map 1.png" alt="Карта">
-     <img src="img/map-marker 1.png" alt="Логотип">
-     <button type="button">Напишите нам</button>
-   </section>
-   <div>
+<footer class="page-footer">
+  <section class="footer-contacts">
+    <h2>Nеrds design studio</h2>
+    <p>
+    191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>
+    тел. <a  class="footer-phone" href="tel:+78122757575">+7 (812) 275 75-75</a>
+    </p>
+    <img src="img/map 1.png" alt="Карта">
+    <img src="img/map-marker 1.png" alt="Логотип">
+    <button class="button" type="button">Напишите нам</button>
+  </section>
+  <div class="modal-popup">
    <h2>Напишите нам</h2>
-   <button type="button">Отпавить</button>
-   </div>
+   <button class="button" type="button">Отпавить</button>
+  </div>
 
-   <section>
-    <div>
+  <section class="footer-social">
+   <div class="footer-text">
      <h2>Давайте дружить, это выгодно!</h2>
      <p>Скидка 10% для друзей из социальных сетей.</p>
-    </div>
+   </div>
     <ul>
       <li>
-       <a href="#">Вконтакте</a> 
+       <a class="button-social" href="#">Вконтакте</a> 
       </li>
       <li>
-       <a href="#">Фейсбук</a>
+       <a class="button-social" href="#">Фейсбук</a>
       </li>
       <li>
-       <a href="#">Инстаграм</a>
+       <a class="button-social" href="#">Инстаграм</a>
       </li>
     </ul>
-   </section>
- </footer>
+  </section>
+</footer>
 
 </body>
 </html>
