--- a/catalog.html
+++ b/catalog.html
@@ -25,23 +25,23 @@
  </nav>
 </header>
 
-<main class="page-main">
+<main>
 
  <section>
-   <h2>Стоимость</h2>
+   <h2>Стоимость:</h2>
  </section>
  
  <section>
-   <h2>Сортировать</h2>
+   <h2>Сортировать:</h2>
  </section>
  
- <ul class="main-feuture">
+ <ul>
    <li><a href="">По цене</a></li>
    <li>По типу</li>
    <li>По названию</li>
  </ul>
  
- <section class="main-image">
+ <section>
    <img src="img/img-sedona 1.png" alt="Город Седона">
    <img src="img/img-pink 1.png" alt="Приложение">
    <img src="img/img-barbershop 1.png" alt="Барбершоп">
@@ -50,7 +50,7 @@
    <img src="img/img-kvast 1.png" alt="Квас">
    <ul class="main-benefit">
      <li>
-       <a class="main-link" href="#">1</a>
+       <a href="#">1</a>
      </li>
      <li>
        <a>2</a>
@@ -64,20 +64,20 @@
 
 </main>
 
-<footer>
-  <section>
+<footer class="page-footer">
+  <section class="footer-contacts">
    <h2>Nеrds design studio</h2>
    <p>
    191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>
-   тел. <a href="tel:+78122757575">+7 (812) 275 75-75</a>
+   тел. <a class="footer-phone" href="tel:+78122757575">+7 (812) 275 75-75</a>
    </p>
    <img src="img/map 1.png" alt="Карта">
    <img src="img/map-marker 1.png" alt="Логотип">
-   <button type="button">Напишите нам</button>
+   <button type="button-footer">Напишите нам</button>
   </section>
   <div class="modal-popup">
    <h2>Напишите нам</h2>
-   <button class="button" type="button">Отпавить</button>
+   <button class="button-footer" type="button">Отпавить</button>
   </div>
   
   <section class="footer-social">
