--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link href="normalize.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 </head>
@@ -33,53 +34,53 @@
      <img src="img/nerds-index-slide1 1.png">
      <a class="feature-link" href="">Узнать больше</a>
    </div>
-   <div>
-     <h1>Любим математику<br>как никто другой</h1>
+   <div class="feature-menu">
+     <h1 class="caption">Любим математику<br>как никто другой</h1>
      <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций</p>
      <img src="img/nerds-index-slide2 1.png">
      <a class="feature-link" href="">Узнать больше</a>
    </div>
-   <div>
-     <h1>Только ночь,<br>только хардкор</h1>
+   <div class="feature-menu">
+     <h1 class="caption">Только ночь,<br>только хардкор</h1>
      <p>Работать днём, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
      <img src="img/nerds-index-slide3 1.png">
      <a class="feature-link" href="">Узнать больше</a>
    </div>
    <ul class="feature-list">
-     <li class="feature-red">
+     <li class="feature-item">
        <img src="img/illustration-1 1.jpg" alt="Веб-сайты">
-       <h2>Веб-сайты</h2>
+       <h2 class="caption-2">Веб-сайты</h2>
        <p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
-       <button class="button" type="button">Заказать</button>
+       <button class="button-red" type="button">Заказать</button>
      </li>
-     <li class="feature-green">
+     <li class="feature-item">
        <img src="img/illustration-2 1.png" alt="Приложения">
-       <h2>Приложения</h2>
+       <h2 class="caption-2">Приложения</h2>
        <p>Покорите топ-10 приложений в<br>AppStore и Google Play</p>
-       <button class="button" type="button">Заказать</button>
+       <button class="button-green" type="button">Заказать</button>
      </li>
-     <li class="feature-yellow">
+     <li class="feature-item">
        <img src="img/illustration-3 1.png" alt="Презентация">
-       <h2>Презентация</h2>
+       <h2 class="caption-2">Презентация</h2>
        <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
-       <button class="button" type="button">Заказать</button>
+       <button class="button-yellow" type="button">Заказать</button>
      </li>
    </ul>
  </section>
 
  <section class="benefits"> 
    <div class="benefit-menu">
-     <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
-     <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
+     <h2 class="caption-3">Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
+     <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
      <ul class="benefit-list">
-       <h2>Выполняем заказы на разработку</h2>
+       <h4 class="caption-4">Выполняем заказы на разработку:<h4>
        <li>Веб-сайтов любой сложности</li>
        <li>Мобильных приложений для iOS и Android</li>
        <li>Слайдшоу и видео для корпоративных презентаций</li>
      </ul>
    </div>
    <div class="benefit-menu">
-     <figure class="main-image">
+     <figure class="benefit-image">
        <img src="img/nerds-illustration 1.png" alt="Картинка">
        <figcaption>с 2004 года Любим точность во всем: </figcaption>
      </figure>
@@ -117,15 +118,15 @@
     <h2>Nеrds design studio</h2>
     <p>
     191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>
-    тел. <a  class="footer-phone" href="tel:+78122757575">+7 (812) 275 75-75</a>
+    тел. <a class="footer-phone" href="tel:+78122757575">+7 (812) 275 75-75</a>
     </p>
     <img src="img/map 1.png" alt="Карта">
     <img src="img/map-marker 1.png" alt="Логотип">
-    <button class="button" type="button">Напишите нам</button>
+    <button class="button-footer" type="button">Напишите нам</button>
   </section>
   <div class="modal-popup">
    <h2>Напишите нам</h2>
-   <button class="button" type="button">Отпавить</button>
+   <button class="button-footer" type="button">Отпавить</button>
   </div>
 
   <section class="footer-social">
