--- a/catalog.html
+++ b/catalog.html
@@ -14,11 +14,11 @@
     <a class="header-logo">
      <img src="img/nerds-logo.svg" alt="Интернет магазин «Нёрдс»">
     </a>
-    <h1 class="caption">Магазин готовых шаблонов</h1>
+    <h1>Магазин готовых шаблонов</h1>
     <ul class="header-feuture">
       <li><a href="">Студия</a></li>
       <li><a href="">Клиенты</a></li>
-      <li><a href="catalog.html">Магазин</a></li>
+      <li><a href="">Магазин</a></li>
       <li><a href="">Контакты</a></li>
     </ul>
    <a class="header-link" href="">Корзина</a>
@@ -85,7 +85,7 @@
      <h2>Давайте дружить, это выгодно!</h2>
      <p>Скидка 10% для друзей из социальных сетей.</p>
    </div>
-    <ul>
+    <ul class="footer-item">
       <li>
        <a class="button-social" href="#">Вконтакте</a> 
       </li>
