--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
   <section class="features">
    <div class="feature-menu">
-     <h1 class="caption">Долго, дорого,<br>скрупулезно.</h1>
+     <h1>Долго, дорого,<br>скрупулезно.</h1>
      <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
      <img src="img/nerds-index-slide1 1.png">
      <a class="feature-link" href="">Узнать больше</a>
    </div>
    <div class="feature-menu">
-     <h1 class="caption">Любим математику<br>как никто другой</h1>
+     <h1>Любим математику<br>как никто другой</h1>
      <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций</p>
      <img src="img/nerds-index-slide2 1.png">
      <a class="feature-link" href="">Узнать больше</a>
    </div>
    <div class="feature-menu">
-     <h1 class="caption">Только ночь,<br>только хардкор</h1>
+     <h1>Только ночь,<br>только хардкор</h1>
      <p>Работать днём, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
      <img src="img/nerds-index-slide3 1.png">
      <a class="feature-link" href="">Узнать больше</a>
@@ -49,19 +49,19 @@
    <ul class="feature-list">
      <li class="feature-item">
        <img src="img/illustration-1 1.jpg" alt="Веб-сайты">
-       <h2 class="caption-2">Веб-сайты</h2>
+       <h2>Веб-сайты</h2>
        <p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
        <button class="button-red" type="button">Заказать</button>
      </li>
      <li class="feature-item">
        <img src="img/illustration-2 1.png" alt="Приложения">
-       <h2 class="caption-2">Приложения</h2>
+       <h2>Приложения</h2>
        <p>Покорите топ-10 приложений в<br>AppStore и Google Play</p>
        <button class="button-green" type="button">Заказать</button>
      </li>
      <li class="feature-item">
        <img src="img/illustration-3 1.png" alt="Презентация">
-       <h2 class="caption-2">Презентация</h2>
+       <h2>Презентация</h2>
        <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
        <button class="button-yellow" type="button">Заказать</button>
      </li>
@@ -70,10 +70,10 @@
 
  <section class="benefits"> 
    <div class="benefit-menu">
-     <h2 class="caption-3">Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
+     <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
      <ul class="benefit-list">
-       <h4 class="caption-4">Выполняем заказы на разработку:<h4>
+       <h4 class="caption">Выполняем заказы на разработку:<h4>
        <li>Веб-сайтов любой сложности</li>
        <li>Мобильных приложений для iOS и Android</li>
        <li>Слайдшоу и видео для корпоративных презентаций</li>
@@ -86,22 +86,22 @@
      </figure>
      <ul class="benefit-list">
        <li class="benefit-item">
-         <h3>146%</h3>
+         <span>146%</span>
          <p>Уровень самоотдачи</p>
        </li>
        <li class="benefit-item">
-         <h3>100%</h3>
+         <span>100%</span>
          <p>Соблюдение сроков</p>
        </li>
        <li class="benefit-item">
-         <h3>50%</h3>
+         <span>50%</span>
         <p>Минимальная предоплата</p>
        </li>
      </ul>
     </div>
   </section>
-   <div class="benefit-logo">
-    <ul>
+   <div>
+    <ul class="benefit-logo">
      <li>
        <img src="img/Group 5.png" alt="Логотип академии">
        <img src="img/logo-2 1.svg" alt="Барбершоп">
@@ -134,7 +134,7 @@
      <h2>Давайте дружить, это выгодно!</h2>
      <p>Скидка 10% для друзей из социальных сетей.</p>
    </div>
-    <ul>
+    <ul class="footer-item">
       <li>
        <a class="button-social" href="#">Вконтакте</a> 
       </li>
