--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
    <a class="header-logo">
      <img src="img/nerds-logo.svg" alt="Интернет магазин «Нёрдс»">
    </a>
-   <ul class="header-feature">
+   <ul class="main-navigation">
       <li><a href="">Студия</a></li>
       <li><a href="">Клиенты</a></li>
       <li><a href="catalog.html">Магазин</a></li>
       <li><a href="">Контакты</a></li>
     </ul>
-    <a class="header-link" href="">Корзина</a>
+    <div class="user-navigation">
+      <a class="basket" href="">Корзина</a>
+    </div> 
   </nav>
 </header>
 
@@ -29,19 +31,19 @@
 
   <section class="features">
    <div class="feature-menu">
-     <h1>Долго, дорого,<br>скрупулезно.</h1>
+     <span class="feature-heading">Долго, дорого,<br>скрупулезно.</span>
      <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения</p>
      <img src="img/nerds-index-slide1 1.png">
      <a class="feature-link" href="">Узнать больше</a>
    </div>
    <div class="feature-menu">
-     <h1>Любим математику<br>как никто другой</h1>
+     <span class="feature-heading">Любим математику<br>как никто другой</span>
      <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций</p>
      <img src="img/nerds-index-slide2 1.png">
      <a class="feature-link" href="">Узнать больше</a>
    </div>
    <div class="feature-menu">
-     <h1>Только ночь,<br>только хардкор</h1>
+     <span class="feature-heading">Только ночь,<br>только хардкор</span>
      <p>Работать днём, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
      <img src="img/nerds-index-slide3 1.png">
      <a class="feature-link" href="">Узнать больше</a>
@@ -70,7 +72,7 @@
 
  <section class="benefits"> 
    <div class="benefit-menu">
-     <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
+     <h1>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h1>
      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
      <ul class="benefit-list">
        <h4 class="caption">Выполняем заказы на разработку:<h4>
