--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link href="normalize.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 </head>
@@ -14,25 +15,27 @@
     <a class="header-logo">
      <img src="img/nerds-logo.svg" alt="Интернет магазин «Нёрдс»">
     </a>
-    <h1>Магазин готовых шаблонов</h1>
-    <ul class="header-feuture">
+    <h1 class="header-haeding">Магазин готовых шаблонов</h1>
+    <ul class="main-navigation">
       <li><a href="">Студия</a></li>
       <li><a href="">Клиенты</a></li>
       <li><a href="">Магазин</a></li>
       <li><a href="">Контакты</a></li>
     </ul>
-   <a class="header-link" href="">Корзина</a>
+    <div class="user-navigation">
+      <a class="basket" href="">Корзина</a>
+    </div> 
  </nav>
 </header>
 
-<main>
+<main class="page-catalog">
 
  <section>
-   <h2>Стоимость:</h2>
+   <h2 class="page-title">Стоимость:</h2>
  </section>
  
  <section>
-   <h2>Сортировать:</h2>
+   <h2 class="page-title">Сортировать:</h2>
  </section>
  
  <ul>
@@ -73,7 +76,7 @@
    </p>
    <img src="img/map 1.png" alt="Карта">
    <img src="img/map-marker 1.png" alt="Логотип">
-   <button type="button-footer">Напишите нам</button>
+   <button class="button-footer" type="button">Напишите нам</button>
   </section>
   <div class="modal-popup">
    <h2>Напишите нам</h2>
